<resources>
    <string name="app_name">MLM-ECOM</string>
    <string name="singup"><u>SIGN UP</u></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="secure_payment_text"><b><font fgcolor='#000000'>100 % Purchase Protection</font></b><br /><b><font fgcolor='#F9A825'> Original Products | Secure Payment </font> </b> </string>
    <string name="emailId">sawantp500@gmail.com</string>
    <string name="err_msg_email">Please Enter A Valid Email Id</string>
    <string name="contactNo">0123456789</string>
    <string name="save">Save</string>

    <!-- TODO: Remove or change this placeholder text -->

    <!-- TODO: Remove or change this placeholder text -->

    <!-- TODO: Remove or change this placeholder text -->

    <string name="hello_developer">Hello Dear !</string>
    <string name="android_development_community">Android Development Community</string>
    <string name="login">Login</string>
    <string name="you_are_not_a_member_register">You are not a member? <b><font fgcolor='#3CDA85'>Register.</font></b></string>
    <string name="nice_to_see_you">Nice to see you!</string>
    <string name="email_hint">Mobile Number</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="view_profile">view profile</string>
    <string name="verify">Verify</string>
    <string name="enter_your_an_otp_and_we_will_verify_an_otp_to_change_the_password">Enter your an OTP and we will verify an OTP to change the password</string>
    <string name="submit">Submit</string>
    <string name="todo">TODO</string>

    <array name="menuOptions">
        <item>Home</item>
        <item>Personal</item>
        <item>High scores</item>
        <item>Settings</item>
        <item>About</item>
    </array>

    <string name="proceed">Proceed</string>
    <string name="new_security_pin">new security pin</string>
    <string name="confirm_security_pin">confirm security pin</string>


</resources>
