<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    tools:context=".Activity.Login">

    <RelativeLayout
        android:id="@+id/loginLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.flaviofaria.kenburnsview.KenBurnsView
            android:id="@+id/viewCard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintVertical_bias="1.0" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true">

            <TextView
                android:id="@+id/nice_to_see_you_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/nice_to_see_you"
                android:fontFamily="@font/montserratbold"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <RelativeLayout
                android:id="@+id/login_input_parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nice_to_see_you_text_view"
                android:layout_marginTop="30dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/email_input_parent"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    app:cardBackgroundColor="@color/colorCardViewBackground"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="0dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <com.andreabaccega.widget.FormEditText
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp"
                            android:background="@null"
                            android:hint="@string/email_hint"
                            android:imeOptions="actionNext"
                            android:fontFamily="@font/montserratmedium"
                            android:inputType="numberDecimal"
                            android:digits="0123456789"
                            android:maxLength="10"
                            android:maxLines="1"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            tools:ignore="TextFields" />

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/password_input_parent"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_below="@+id/email_input_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="15dp"
                    app:cardBackgroundColor="@color/colorCardViewBackground"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="0dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <com.andreabaccega.widget.FormEditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp"
                            android:background="@null"
                            android:hint="@string/password_hint"
                            android:imeOptions="actionDone"
                            android:fontFamily="@font/montserratmedium"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            tools:ignore="TextFields" />

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/forgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/password_input_parent"
                    android:layout_marginStart="15dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="10dp"
                    android:ellipsize="end"
                    android:visibility="gone"
                    android:lines="1"
                    android:text="@string/forgot_password"
                    android:fontFamily="@font/montserratregular"
                    android:textColor="@color/colorAccent"
                    android:textSize="15sp" />


            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/login_button_card_view"
                android:layout_width="130dp"
                android:layout_height="45dp"
                android:layout_below="@+id/login_input_parent"
                android:layout_marginStart="15dp"
                android:layout_alignParentStart="true"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                app:cardBackgroundColor="@color/colorCardViewBackground"
                app:cardCornerRadius="22.5dp"
                app:cardElevation="0dp">

                <RelativeLayout
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="false"
                    android:focusable="false">

                    <TextView
                        android:id="@+id/signUp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:ellipsize="end"
                        android:lines="1"
                        android:text="@string/login"
                        android:textColor="@color/white"
                        android:fontFamily="@font/montserratmedium"
                        android:textSize="18sp" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

        <TextView
            android:id="@+id/signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="15dp"
            android:ellipsize="end"
            android:lines="1"
            android:fontFamily="@font/montserratmedium"
            android:text="@string/you_are_not_a_member_register"
            android:textColor="@color/black"
            android:textSize="15sp" />

    </RelativeLayout>

</androidx.core.widget.NestedScrollView>